# capi-api

./: .gitignore  Cargo.toml  Cross.toml  Rocket.toml  log_config.yml  sample.env  tmp_bytes
scripts/: build_and_deploy_executable.sh  deploy_executable.sh  deploy_sources.sh  reset_dirs.sh
src/: main.rs
src/dao/: aws.rs  bytes_dao.rs  db.rs  image_dao.rs  image_service.rs  mod.rs
