[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mbase = { path = "./mbase" } 

algonaut = { git = "https://github.com/manuelmauro/algonaut", branch = "main", features = ["rustls"], default-features = false }
# algonaut = { path = "../../algonaut", features = ["rustls"], default-features = false }
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
rocket = "0.5.0-rc.1"
rocket_cors = "0.6.0-alpha1"
log = "0.4"
tokio = { version = "1.2.0", features = ["full"] }
async-trait = "0.1.51"
data-encoding = "2.3.2"
serde_json = "1.0.64"
chrono = "0.4.19"
dotenv = "0.15.0"
log4rs = "0.12.0"
sha2 = "0.10.1"
aws-config = { version = "0.12.0", features = ["rustls"] }
aws-sdk-s3 = { version = "0.12.0", features = ["rustls"] }
structopt = "0.3.26"
tracing-subscriber = "0.3.11"
image = "0.24.2"
bytes = "1.1.0"
